addresses/manifests/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-commence-addresses-service
spec:
  selector:
    app: e-commence-addresses
  ports:
    - name: http
      port: 30015
      protocol: TCP
      targetPort: 30015
      nodePort: 30015
    - name: grpc
      port: 30016
      protocol: TCP
      targetPort: 30016
      nodePort: 30016
  type: NodePort
